--- a/style(문제).css
+++ b/style(문제).css
@@ -1,18 +1,11 @@
-/* 글꼴 설정  */
-/*순서
-1. 배경(container)
-2.헤더 (header)
-3. Design 로고 
-4. 메뉴 (nav): 배치, 글자 꾸미기, 호버
-5. 본문(hero)
-제목, 본문, 내용 
- */
- @font-face {
+/* 글꼴 설정 */
+/* @font-face {
     font-family: abster;
     src: url(font/abster-webfont.woff) format('woff');
-}  
+} */
 
-/* 초기화 코드  기본 값 정의*/
+순서 : 1. 배경 2. 내용 3. 헤더 4. 콘텐츠
+
 *{
     margin: 0;
     padding: 0;
@@ -21,10 +14,10 @@
 
 /* container는 배경을 의미 */
 .container{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url(images/room.jpg);
-    
+    /* background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)); */  url(images/room.jpg) -> 코드 작성해야함
 }
 
 /* header 영역은 화면 상단의 Design 로고글자와 메뉴바를 포함한다.  */
@@ -60,15 +53,15 @@
     color: skyblue; 
 }
 
- .container .hero{ 
+/* .container .hero{ */
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
     color: white;
     text-align: center;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;   /*안외워도됨 */
-} 
+    /* font-family:Verdana, Geneva, Tahoma, sans-serif;  */
+/* } */
 
 .container .hero h2{
     font-size: 60px;
